Idk why this wasnt pushed

--- a/home.html
+++ b/home.html
@@ -277,20 +277,15 @@ Teamspeak: <?php onlineStatus(); ?>
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Algorithm title <span>Java</span>
+						 Algorithm title <span>  Written in Java</span>
 					</div>
 					<div>
-						<p>
-							 Enter text describing an algorithm
-						</p>
-						<p>
-							<pre class="prettyprint">
-public class Hi {
-	public static void main(String[] args){
-			System.out.println("Hi");
-	}
+              <pre class="prettyprint">
+public static void main (String[] args){
+    System.out.println("Test my face");
 }
-							</pre>
+              </pre>
+						<p>
 						</p>
 					</div>
 				</div>
@@ -301,7 +296,7 @@ public class Hi {
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Simple code box<span>CSS</span>
+						 Simple code box<span>  Written in CSS</span>
 					</div>
 					<div class="testimonials-carousel-content">
 						<p>
@@ -332,7 +327,7 @@ public class Hi {
 				</div>
 				<div class="testimonials-carousel-context">
 					<div class="testimonials-name">
-						 Algorithm Title <span>C#</span>
+						 Algorithm Title <span>  Written in C#</span>
 					</div>
 					<div class="testimonials-carousel-content">
 						<p>
@@ -340,9 +335,9 @@ public class Hi {
 						</p>
 					</div>
 					<p>
-						<div class="code">
-						 Some C# Algorithm
-						</div>
+            <pre class="prettyprint">
+Some C# stuff goes here
+            </pre>
 					</p>
 				</div>
 			</div>
