Fixing a few mistakes, removing tests for TS3 integration & Syntax

--- a/Programming.html
+++ b/Programming.html
@@ -56,7 +56,7 @@
             <div class="col-md-12">
                 <h2>Object Oriented Programming - Inheritance</h2>
                 <p>
-                <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
+                <h3>Inheritance allows classes to extend features and properties from others</h3>
                 <ul class="row text-left">
                     <li>Personal data should be obtained and processed fairly amnd lawfully </li>
                     <li>Personal data can be held only for specified and lawful purposes </li>
