Added links to everything that can be linked!

--- a/home.html
+++ b/home.html
@@ -50,8 +50,8 @@
 						 <h1>Programming, hosting and overall technology enthusiast.</h1>
 					</div>
 					<br/>
-					<a href="#" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-link"></i>&nbsp; Other Site</a>
-					<a href="#Section-3" class="buttoncolor animated fadeInRightBig"><i class="fa fa-envelope-o"></i>&nbsp; Contact</a>
+					<a href="index.html" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-link"></i>&nbsp; Other Site</a>
+					<a href="mailto:someone@example.com?Subject=Business%20enquiry" class="buttoncolor animated fadeInRightBig"><i class="fa fa-envelope-o"></i>&nbsp; Contact</a>
 
 				</div>
 			</div>
@@ -167,7 +167,7 @@
 			<figcaption>
 			<h3>Teamspeak</h3>
 			<span>A server I host</span>
-			<a href="#">Take a look</a>
+			<a href="http://i.imgur.com/vupyZy9.png">Take a look</a>
 			</figcaption>
 			</figure>
 			</li>
@@ -179,7 +179,7 @@
 			<figcaption>
 			<h3>Sololearn</h3>
 			<span>Java tutorial course</span>
-			<a href="#">Take a look</a>
+			<a href="http://i.imgur.com/skhw9fk.png">Take a look</a>
 			</figcaption>
 			</figure>
 			</li>
@@ -191,7 +191,7 @@
 			<figcaption>
 			<h3>Sololearn</h3>
 			<span>HTML Course</span>
-			<a href="#">Take a look</a>
+			<a href="http://i.imgur.com/Kl4iK0a.png">Take a look</a>
 			</figcaption>
 			</figure>
 			</li>
@@ -203,7 +203,7 @@
 			<figcaption>
 			<h3>Java & CSS</h3>
 			<span>Completed codecademy courses</span>
-			<a href="#">Take a look</a>
+			<a href="http://i.imgur.com/zgQBH2C.png">Take a look</a>
 			</figcaption>
 			</figure>
 			</li>
@@ -226,7 +226,7 @@
 			</div>
 			<figcaption>
 			<h3>Phone</h3>
-			<span>Wow</span>
+			<span>Placeholder</span>
 			<a href="#">Take a look</a>
 			</figcaption>
 			</figure>
@@ -234,7 +234,6 @@
 		</ul>
 	</div>
 </div>
-Teamspeak: <?php onlineStatus(); ?>
 </div>
 
 </section>
@@ -412,11 +411,11 @@ public class Hangman {
 <div class="row">
 	<div class="text-center color-white col-sm-12 col-lg-12">
 		<ul class="social-icons">
-			<li><a href="#"><i class="fa fa-envelope-o"></i></a></li>
+			<li><a href="mailto:james.mcnicholas1@gmail.com?Subject=Business%20enquiry""><i class="fa fa-envelope-o"></i></a></li>
 			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 			<li><a href="http://steamcommunity.com/id/jambosquidge"><i class="fa fa-steam"></i></a></li>
-			<li><a href="#"><i class="fa fa-github"></i></a></li>
-			<li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
+			<li><a href="https://github.com/jmcnicholas62743"><i class="fa fa-github"></i></a></li>
+			<li><a href="https://stackoverflow.com/users/8327559/james-mcnicholas"><i class="fa fa-stack-overflow"></i></a></li>
 		</ul>
 		<p>
 			 ©Jamesmc.me 2017
