Added update codecademy links

--- a/home.html
+++ b/home.html
@@ -203,7 +203,7 @@
 			<figcaption>
 			<h3>Java & CSS</h3>
 			<span>Completed codecademy courses</span>
-			<a href="http://i.imgur.com/zgQBH2C.png">Take a look</a>
+			<a href="https://www.codecademy.com/JamesMcnicholas">Take a look</a>
 			</figcaption>
 			</figure>
 			</li>
@@ -416,6 +416,7 @@ public class Hangman {
 			<li><a href="http://steamcommunity.com/id/jambosquidge"><i class="fa fa-steam"></i></a></li>
 			<li><a href="https://github.com/jmcnicholas62743"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://stackoverflow.com/users/8327559/james-mcnicholas"><i class="fa fa-stack-overflow"></i></a></li>
+			<li><a href="https://www.codecademy.com/JamesMcnicholas"><i class="fa fa-terminal"></i></a></li>
 		</ul>
 		<p>
 			 ©Jamesmc.me 2017
